--- a/app/stylus/index.styl
+++ b/app/stylus/index.styl
@@ -15,8 +15,8 @@ html {
 	// background-position: center;
 	// background-size: cover;
 	// background-repeat: no-repeat;
-	background: #141E30;
-	background: linear-gradient(to top, #243B55, #141E30);
+	background: #000000;
+	background: linear-gradient(to top, #000000, #041C41 );
 	font-family: 'Roboto';
 	font-weight: 300;
 
