--- a/app/stylus/components/PeerView.styl
+++ b/app/stylus/components/PeerView.styl
@@ -187,6 +187,9 @@
 				font-size: 14px;
 				font-weight: 400;
 				color: rgba(#fff, 0.85);
+				position:absolute;
+				bottom:15px;
+				width:100%;
 			}
 
 			> span.display-name {
