--- a/app/stylus/components/Peers.styl
+++ b/app/stylus/components/Peers.styl
@@ -29,13 +29,14 @@
 
 		+desktop() {
 			flex: 0 0 auto;
-			height: 382px;
-			width: 450px;
+			height: 326px;
+			width: 495px;
 			margin: 6px;
 			border: 1px solid rgba(#fff, 0.15);
 			box-shadow: 0px 5px 12px 2px rgba(#111, 0.5);
 			transition-property: border-color;
 			transition-duration: 0.35s;
+			border-radius: 12px;
 
 			&.active-speaker {
 				border-color: #fff;
