--- a/app/stylus/index.styl
+++ b/app/stylus/index.styl
@@ -10,13 +10,13 @@ global-reset();
 html {
 	height: 100%;
 	box-sizing: border-box;
-	// background-image: url('/resources/images/body-bg-2.jpg');
-	// background-attachment: fixed;
-	// background-position: center;
-	// background-size: cover;
-	// background-repeat: no-repeat;
-	background: #000000;
-	background: linear-gradient(to top, #000000, #041C41 );
+	background-image: url('/resources/images/body-bg-2.jpg');
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	//background: #000000;
+	//background: linear-gradient(to top, #000000, #041C41 );
 	font-family: 'Roboto';
 	font-weight: 300;
 
