adding action to events utils function and handling auth-token

--- a/app/stylus/components/ChatInput.styl
+++ b/app/stylus/components/ChatInput.styl
@@ -9,7 +9,7 @@
 		padding: 4px 8px;
 		resize: none;
 		outline: none;
-		background-color: rgba(#243B55, 1);
+		background-color: rgba(#0e0e0e, 1);
 		color: #fff;
 		font-family: inherit;
 		font-size: 13px;
@@ -18,7 +18,7 @@
 		border: none;
 
 		+placeholder() {
-			color: rgba(#fff, 0.35);
+			color: rgba(#fff, 0.55);
 		}
 
 		&:disabled {
