--- a/app/stylus/components/Me.styl
+++ b/app/stylus/components/Me.styl
@@ -6,11 +6,10 @@
 	> .controls {
 		position: absolute;
 		z-index: 10;
-		top: 0;
-		left: 0;
-		right: 0;
+		top: 5px;
+		left: 9px;
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		justify-content: flex-end;
 		align-items: center;
 		pointer-events: none;
@@ -19,7 +18,7 @@
 			flex: 0 0 auto;
 			margin: 4px;
 			margin-left: 0;
-			border-radius: 2px;
+			border-radius: 8px;
 			pointer-events: auto;
 			background-position: center;
 			background-size: 75%;
