--- a/app/stylus/components/Room.styl
+++ b/app/stylus/components/Room.styl
@@ -199,11 +199,12 @@
 		box-shadow: 0px 5px 12px 2px rgba(#111, 0.5);
 
 		+desktop() {
-			height: 30px;
-			width: 294px;
+			height: 31px;
+			width: 334px;
 			bottom: 20px;
 			left: 20px;
 			border: 1px solid rgba(#fff, 0.15);
+			border-radius: 7px;
 		}
 
 		+mobile() {
@@ -211,6 +212,7 @@
 			width: 200px;
 			bottom: 10px;
 			left: 10px;
+			border-radius: 7px;
 			border: 1px solid rgba(#fff, 0.25);
 		}
 	}
@@ -218,17 +220,17 @@
 	> .sidebar {
 		position: fixed;
 		z-index: 101;
-		top: calc(50% - 60px);
-		height: 120px;
+		height: 8px;
 		display: flex;
-		flex-direction: column;
+		flex-direction: ;
 		justify-content: center;
 		align-items: center;
 
 		+desktop() {
-			left: 20px;
+			right: 208px;
 			width: 36px;
-			margin-top: -60px;
+			margin-top: 0px;
+			top: 30px;
 		}
 
 		+mobile() {
@@ -239,9 +241,9 @@
 
 		> .button {
 			flex: 0 0 auto;
-			margin: 4px 0;
+			margin: 4px 4px;
 			background-position: center;
-			background-size: 75%;
+			background-size: 65%;
 			background-repeat: no-repeat;
 			background-color: $COLOR_BG_1;
 			cursor: pointer;
@@ -250,8 +252,8 @@
 			border-radius: 100%;
 
 			+desktop() {
-				height: 36px;
-				width: 36px;
+				height: 30px;
+				width: 30px;
 			}
 
 			+mobile() {
