--- a/app/stylus/components/Room.styl
+++ b/app/stylus/components/Room.styl
@@ -117,9 +117,8 @@
 		pointer-events: none;
 		position: absolute;
 		z-index: 1;
-		top: 0;
-		left: 0;
-		right: 0;
+		top: 16px;
+		left: 74px;
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
@@ -127,8 +126,7 @@
 		> .room-link {
 			width: auto;
 			background-color: $COLOR_BG_1;
-			border-bottom-right-radius: 4px;
-			border-bottom-left-radius: 4px;
+			border-radius: 56px;
 			box-shadow: 0px 3px 12px 2px rgba(#111, 0.4);
 
 			> a.link {
@@ -234,8 +232,8 @@
 		}
 
 		+mobile() {
-			left: 10px;
-			width: 32px;
+			bottom: 294px;
+			width: 131px;
 			margin-top: -80px;
 		}
 
