--- a/app/stylus/index.styl
+++ b/app/stylus/index.styl
@@ -37,6 +37,19 @@ body {
   background: rgba(0, 0, 0, 0.75);
 }
 
+.full-screen {
+	position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-top: 4rem;
+  margin-left: 4rem;
+  padding-bottom: 5rem;
+  padding-right: 5rem;
+  z-index: 999;
+}
+
 .popup-modal{
   background: #ffffff;
   width: 38vw;
