--- a/app/stylus/components/PeerView.styl
+++ b/app/stylus/components/PeerView.styl
@@ -299,6 +299,11 @@
 			filter: grayscale(100%) brightness(135%) blur(5px);
 		}
 	}
+	> canvas.canvasPerson{
+		position: absolute;
+		right: 10px;
+		top:10px
+	} 
 
 	> audio {
 		display: none;
@@ -402,6 +407,7 @@
 		background-repeat: no-repeat;
 	}
 }
+
 
 @keyframes PeerView-spinner {
 	0% { opacity: 1; }
