--- a/app/stylus/index.styl
+++ b/app/stylus/index.styl
@@ -94,7 +94,7 @@ body {
 #precisely-demo-app-container {
 	height: 100%;
 	width: 100%;
-	
+	position :relative;	
 	// Components
 	@import './components/Room';
 	@import './components/Me';
