--- a/app/stylus/components/PeerView.styl
+++ b/app/stylus/components/PeerView.styl
@@ -307,6 +307,7 @@
     	top: 0;
     	left: 0;
     	position: absolute;
+		z-index: 11;
 		> #background-container {
 			position absolute;
 			top :0;
